<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLogin"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="60">

            <LinearLayout
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="80">

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="20">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/logodrmertm"
                    android:layout_weight="1"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Ratlam Division"
                    android:textColor="@color/darkbluecolour"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:gravity="center"
                    ></TextView>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="40">

            <LinearLayout
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@mipmap/user"
                        />
                    <LinearLayout
                        android:layout_marginLeft="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/edt_empid"
                            android:background="@null"
                            android:inputType="text"
                            android:imeOptions="actionNext"
                            android:textColor="@color/black"
                            android:textSize="15dp"
                            android:hint="Employee Id"
                            android:maxLength="11"
                            />
                        <LinearLayout
                            android:layout_marginTop="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/lightgray"
                            ></LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="40dp"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@mipmap/password"
                        />
                    <LinearLayout
                        android:layout_marginLeft="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            >
                        <EditText
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/edt_pass"
                            android:background="@null"
                            android:inputType="textPassword"
                            android:imeOptions="actionDone"
                            android:textColor="@color/black"
                            android:textSize="15dp"
                            android:hint="Password"
                            />

                            <ImageView
                                android:id="@+id/img_password"
                                android:layout_width="17dp"
                                android:layout_height="13dp"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_closepassword" />

                        </LinearLayout>
                        <LinearLayout
                            android:layout_marginTop="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/lightgray"
                            ></LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/txt_reset"
                        android:textSize="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgot_password"
                        android:textColor="@color/darkbluecolour" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/darkblue_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_login"
                    android:text="@string/login"
                    android:textSize="18dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:textSize="15dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/i_don_t_have_account"
                        />
                    <TextView
                        android:id="@+id/txt_request"
                        android:layout_marginLeft="5dp"
                        android:textSize="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register"
                        android:textColor="@color/darkbluecolour"
                        />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>