<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitySignup"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="60">

            <LinearLayout
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="80">

                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:id="@+id/img_back"
                    android:src="@mipmap/back"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="20">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/logodrmertm"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="40">

            <LinearLayout
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@mipmap/user"
                        />
                    <LinearLayout
                        android:layout_marginLeft="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/edt_empid"
                            android:background="@null"
                            android:inputType="text"
                            android:imeOptions="actionNext"
                            android:textColor="@color/black"
                            android:textSize="15dp"
                            android:hint="Employee Id"
                            android:maxLength="11"
                            />
                        <LinearLayout
                            android:layout_marginTop="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/lightgray"
                            ></LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="40dp"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@mipmap/password"
                        />
                    <LinearLayout
                        android:layout_marginLeft="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/edt_panno"
                            android:background="@null"
                            android:inputType="text"
                            android:imeOptions="actionDone"
                            android:textColor="@color/black"
                            android:textSize="15dp"
                            android:hint="Pan No."
                            />
                        <LinearLayout
                            android:layout_marginTop="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/lightgray"
                            ></LinearLayout>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/darkblue_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_signup"
                    android:text="@string/next"
                    android:textSize="18dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:textSize="15dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/i_have_account"
                        />
                    <TextView
                        android:id="@+id/txt_request"
                        android:layout_marginLeft="5dp"
                        android:textSize="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:textColor="@color/darkbluecolour"
                        />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>